force-app/main/default/objects/GfOrder__c/GfOrder__c.object-meta.xml
<CustomObject>
    <label>주문서</label>
    <nameField>
        <displayFormat>GO{YYYYMMDD}-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>