force-app/main/default/objects/GfOrder__c/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gf Order</relationshipLabel>
    <relationshipName>Gf_Order</relationshipName>
    <type>Lookup</type>
</CustomField>