force-app/main/default/objects/GfOrder__c/fields/CompanyAuthorizedBy__c.field-meta.xml
<CustomField>
    <fullName>CompanyAuthorizedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Authorized By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gf_Order</relationshipName>
    <type>Lookup</type>
</CustomField>