force-app/main/default/objects/GfOrder__c/fields/CompanyAuthorizedDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyAuthorizedDate__c</fullName>
    <label>Company Authorized Date</label>
    <type>Date</type>
</CustomField>