force-app/main/default/objects/GfOrder__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>GfContract__c</referenceTo>
    <relationshipLabel>Gf Order</relationshipLabel>
    <relationshipName>Gf_Order</relationshipName>
    <type>Lookup</type>
</CustomField>