force-app/main/default/objects/GfOrder__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Order Start Date</label>
    <type>Date</type>
</CustomField>