force-app/main/default/objects/GfOrder__c/fields/EndCustomer__c.field-meta.xml
<CustomField>
    <fullName>EndCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>EndCustomer__c</referenceTo>
    <relationshipLabel>Gf Order</relationshipLabel>
    <relationshipName>Gf_Order</relationshipName>
    <type>Lookup</type>
</CustomField>