force-app/main/default/objects/GfOrder__c/fields/OrderName__c.field-meta.xml
<CustomField>
    <fullName>OrderName__c</fullName>
    <label>Order Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>