force-app/main/default/objects/GfOrder__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>GfPurchaseOrder__c</referenceTo>
    <relationshipLabel>Gf Order</relationshipLabel>
    <relationshipName>Gf_Order</relationshipName>
    <type>Lookup</type>
</CustomField>