force-app/main/default/objects/GfOrder__c/fields/RuOrderAmount__c.field-meta.xml
<CustomField>
    <fullName>RuOrderAmount__c</fullName>
    <label>Order Amount</label>
    <summarizedField>GfOrderItem__c.RuTotalPrice__c</summarizedField>
    <summaryForeignKey>GfOrderItem__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>